--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 * {
-    color: #fff !important;
     font-family: 'Verdana';
 }
 
 body {
-    margin:0;
+    margin: 0;
     background-color: #1F1F1F;
 }
 
@@ -12,9 +11,10 @@ body {
     border-top: 3px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(to left, #171818, rgb(255, 101, 101), #171818);
-    padding:0;
-    margin:0;
-    background-color: #171818;
+    padding: 0;
+    margin: 0;
+    background: rgb(31,31,31);
+    background: linear-gradient(0deg, rgba(31,31,31,1) 0%, rgba(23,24,24,1) 100%);
     padding-bottom: 10px;
 }
 
@@ -24,21 +24,36 @@ h1 {
 }
 
 h2 {
-    font-weight: 0 !important;
+    font-weight: 0;
+    color: white;
 }
 
 .main-bit {
+    height: 100%;
     background-color: #1F1F1F;
     margin: 50px;
 }
 
 .link-button {
+    position: relative;
+    display:block;
     padding: 30px;
     background-color: #333333;
-    border: 1px solid #676777;
-    margin-bottom: 10px;
+    border: 1px solid rgba(255, 101, 101, 0.342);
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: large;
+    transition: all 300ms;
 }
 
-.link-button a{
+.link-button:hover {
+    background-color: #524545;
+    
+}
+
+.link-button a, a:visited, a:active {
     text-decoration: none;
+    color: white;
 }
